<resources>
    <string name="app_name">Testing</string>

    <string name="main_selection_easy">Easy</string>
    <string name="main_selection_intermediate">Intermediate</string>
    <string name="main_selection_advanced">Advanced</string>
    <string name="main_selection_bonus">Bonus</string>
    <string name="main_selection_aq">AQ</string>

    <string name="start_quiz_label">Start Quiz</string>
    <string name="hint_label">Hint</string>
    <string name="next_question_label">Next Question</string>

    <string name="you_scored_label">You Scored</string>
    <string name="try_again_label">Try Again</string>
</resources>
