<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/you_scored_label"
            android:textSize="60sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_final_score"
            android:text="90"
            android:textSize="90sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_next_level_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_next_level_choice_one"
            android:text="@string/main_selection_intermediate"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/circle_bg_states" />

        <Button
            android:id="@+id/button_next_level_choice_two"
            android:text="@string/main_selection_advanced"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_bg_states" />
    </LinearLayout>

    <TextView
        android:text="Thank your for taking the Android Quotient: Easy. To further test your knowledge, try the other two tests listed above, or return to the Home Screen"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:layout_below="@id/linear_layout_next_level_selection"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_try_again"
        android:text="@string/try_again_label"
        android:textColor="@color/colorTextHintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg_states" />
</RelativeLayout>
